--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://YOUR-USERNAME.github.io/YOUR-REPO",
+  "homepage": "https://houzzdat.github.io",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
